rabbitmq/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-cluster
  namespace: rabbitmq-cluster
spec:
  ingressClassName: nginx
  rules:
    - host: rabbitmq.127.0.0.1.nip.io
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: rabbitmq-cluster
              port:
                number: 15672
